[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/records/none.png" type="Texture" id=1]
[ext_resource path="res://Record.gd" type="Script" id=2]

[node name="Record" type="MarginContainer"]
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordInner" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 238.0
alignment = 1

[node name="DiscMargin" type="MarginContainer" parent="RecordInner"]
margin_right = 150.0
margin_bottom = 110.0
custom_constants/margin_bottom = 10

[node name="Disc" type="TextureRect" parent="RecordInner/DiscMargin"]
margin_right = 150.0
margin_bottom = 100.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="SongName" type="LineEdit" parent="RecordInner"]
margin_top = 114.0
margin_right = 150.0
margin_bottom = 138.0
hint_tooltip = "Only used in README.txt."
align = 1
placeholder_text = "(song name)"
caret_blink = true
caret_blink_speed = 0.5

[node name="Artist" type="LineEdit" parent="RecordInner"]
margin_top = 142.0
margin_right = 150.0
margin_bottom = 166.0
hint_tooltip = "Only used in README.txt."
align = 1
placeholder_text = "(song artist)"
caret_blink = true
caret_blink_speed = 0.5

[node name="Source" type="LineEdit" parent="RecordInner"]
margin_top = 170.0
margin_right = 150.0
margin_bottom = 194.0
hint_tooltip = "Only used in README.txt."
align = 1
placeholder_text = "(source)"
caret_blink = true
caret_blink_speed = 0.5

[node name="FileButton" type="Button" parent="RecordInner"]
margin_top = 198.0
margin_right = 150.0
margin_bottom = 218.0
hint_tooltip = "Pick an MP3 or Ogg file."
text = "Select file..."
clip_text = true
[connection signal="button_down" from="RecordInner/FileButton" to="." method="_on_File_button_down"]
